Atualização no notebook da aula 4 (2024.1)

--- a/docs/slides/04-encapsulamento/04-Encapsulamento.ipynb
+++ b/docs/slides/04-encapsulamento/04-Encapsulamento.ipynb
@@ -318,6 +318,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Também de importância**: um atributo privado não tem relação com a segurança de informações (senhas, nrs. de cartão de crédito, etc.).\n",
+    "\n",
+    "<img src=\"tirinha_private.png\" alt=\"tirinha sobre atributo privado em Python\" style=\"width:400px;\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 2. Getters / Setters\n",
     "\n",
     "Uma vez que os atributos privados de uma classe só podem ser acessados de dentro da classe, torna-se útil utilizar métodos `getters/setters` para acessar/atribuir novos valores a estes atributos através de métodos:\n",
@@ -616,7 +625,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
