Alteração na formatação de tabela no notebook.

--- a/docs/slides/10-polimorfismo/10-Polimorfismo.ipynb
+++ b/docs/slides/10-polimorfismo/10-Polimorfismo.ipynb
@@ -715,15 +715,10 @@
     "\n",
     "| Funcionalidade                                 |          Método                 |\n",
     "|:---------------------------------------------- | ------------------------------: |\n",
-    "| 1. Função especial ```len```                   | ```__len__(self)```             |\n",
-    "| 2. Função especial ```in```                    | ```__contains__(self, e)```     |\n",
-    "| 3. Acesso a uma posição do objeto.\n",
-    "     Sendo o objeto `obj` e a posição `i`, \n",
-    "     `obj[i]` é implementado com                 | ```__getitem__(self, idx)```    |\n",
-    "| 4. Atribuição a uma posição do objeto.\n",
-    "     Sendo o objeto `obj`, a posição `i`\n",
-    "     e o valor a ser atribuído `v`,\n",
-    "     `obj[i] = v` é implementado com             | ```__setitem__(self, i, v)``` |"
+    "| 1. Função especial ```len```                   | `__len__(self)`                 |\n",
+    "| 2. Função especial ```in```                    | `__contains__(self, e)`         |\n",
+    "| 3. Acesso com índice:<br> `obj[i]`             | `__getitem__(self, i)`          |\n",
+    "| 4. Atribuição com índice:<br> `obj[i] = v`     | `__setitem__(self, i, v)`       |"
    ]
   },
   {
