Correção na numeração dos notebooks.

--- a/docs/slides/12-documentacao/12-Documentacao.ipynb
+++ b/docs/slides/12-documentacao/12-Documentacao.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Aula 13 - Documentação de Código\n",
+    "# Aula 12 - Documentação de Código\n",
     "\n",
     "Este documento apresenta as principais funcionalidades presentes na linguagem Python para se documentar código. Além disso, também são mostradas convenções de documentação, que facilitam o entendimento do código e ao mesmo tempo permitem que ferramentas automáticas obtenham informações de como o código documentado deve ser utilizado."
    ]
@@ -239,6 +239,9 @@
     "documentação de código. Além disto, ela também é utilizada por ferramentas externas (como IDEs)\n",
     "para checar se as variáveis/atributos e parâmetros/retornos das funções estão sendo utilizados com\n",
     "objetos do tipo adequado.\n",
+    "\n",
+    "Importante: este recurso serve apenas como documentação, não sendo portanto utilizado pelo\n",
+    "interpretador Python (não há, por exemplo checagem no parâmetro de uma função).\n",
     "\n",
     "A sintaxe para utilizar estas anotações é mostrada a seguir."
    ]
@@ -477,7 +480,7 @@
     "Algumas observações sobre a geração automática de diagramas de classes com `pyreverse`:\n",
     "\n",
     "- Não adiciona notação específica para método de classe e método abstrato/classe abstrata\n",
-    "- Não adiciona métodos mágicos aos diagramas\n",
+    "- Métodos mágicos podem ser adicionados aos diagramas caso desejável (veja a [documentação](https://pylint.readthedocs.io/en/latest/pyreverse.html))\n",
     "- Possivelmente existem outras ferramentas para geração automática de diagramas de classe :)"
    ]
   },
