Pequenas correções no notebook da aula de exceções.

--- a/docs/slides/13-excecoes/13-Excecoes.ipynb
+++ b/docs/slides/13-excecoes/13-Excecoes.ipynb
@@ -157,7 +157,7 @@
    "source": [
     "O programa acima levanta uma exceção do tipo `TypeError` na classe `Pessoa`.\n",
     "No bloco `main`, esta exceção é tratada.\n",
-    "Uma exceção do tipo `TypeError` denota, dentre outras coisas,\n",
+    "Uma exceção do tipo `TypeError` denota, entre outras coisas,\n",
     "um parâmetro com tipo não válido."
    ]
   },
@@ -269,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.2 Except as object\n",
+    "### 2.2 Except as\n",
     "\n",
     "É possível capturar uma exceção como um objeto\n",
     "utilizando `as <nome_do_objeto>`.\n",
